blogs link issue

--- a/views/blogs/all.ejs
+++ b/views/blogs/all.ejs
@@ -11,8 +11,8 @@
     <%- include('../partials/links.ejs') %>
 </head>
 <body>
-    <div class="container" onclick="window.location.href='/why-use-noteroom'" >
-        <a href="/blog/why-use-noteroom"><div class="blog-card">
+    <div class="container" onclick="window.location.href='/blog/why-use-noteroom'" >
+        <div class="blog-card">
             <div class="tags">
                 <span class="tag">#Noteroom</span>
                 <span class="tag">#Study</span>
@@ -20,8 +20,8 @@
             </div>
             <img class="blog-img" src="\images\why-use-noteroom-banner.jpg" alt="Blog Image">
             <h3>Why You Should Use Noteroom: The Game-Changer for HSC Students in Bangladesh</h3>
-        </a>
-    </div> 
+        </div> 
+    </div>
 </body>
 </html>
 
