home page updated

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header class="header flex-col-center">
     <div class="header__container-1 flex-row-center">
       <div class="header__logo flex-row-center">
-        <img src="\assets\apple-touch-icon.png" alt="NoteRoom Logo" onclick="window.location.href='/'" />
+        <img src="\assets\NoteRoom-Logomark-White-BG.jpg" alt="NoteRoom Logo" onclick="window.location.href='/'" />
         <span class="header__logo--subtitle">noteRoom</span>
      </div>
   
