--- a/views/blogs/article-layout-template.ejs
+++ b/views/blogs/article-layout-template.ejs
@@ -42,10 +42,8 @@
     <header class="article-header">
       <div class="article-breadcrumb">
         <nav>
-          <a href="/blog" class="breadcrumb-main">Blog <span>/</span> </a>
-          <a href="/blog/" class="breadcrumb-sub"
-            ></a
-          >
+          <a href="/blog" class="breadcrumb-main">Blog <span>/Test</span></a>
+          <a href="/blog/" class="breadcrumb-sub">Hello</a>
         </nav>
       </div>
 
