--- a/views/blogs/all.njk
+++ b/views/blogs/all.njk
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NoteRoom Blogs</title>
-    <link rel="stylesheet" href="/css/blogs.css">
+{% extends "partials/layout.njk" %}
+
+{% block meta %}
     <meta name="description" content="Explore our blog for helpful study tips, academic insights, and the latest updates on NoteRoom. Find valuable resources to support your HSC journey and enhance your learning experience.">
     <meta name="keywords" content="NoteRoom Blog">
-    <link rel="stylesheet" href="/css/blog-template.css">
-    <%- include('../partials/links.ejs') %>
-</head>
-<body>
+{% endblock %}
+
+{% block title %}
+    NoteRoom Blogs
+{% endblock %}
+
+{% block content %}
     <div class="container" onclick="window.location.href='/blog/why-use-noteroom'" >
         <div class="blog-card">
             <div class="tags">
@@ -18,10 +17,13 @@
                 <span class="tag">#Study</span>
                 <span class="tag">#HSC</span>
             </div>
-            <img class="blog-img" src="\images\why-use-noteroom-banner.jpg" alt="Blog Image">
+            <img class="blog-img" src="{{ image_path('why-use-noteroom-banner.jpg') }}" alt="Blog Image">
             <h3>Why You Should Use Noteroom: The Game-Changer for HSC Students in Bangladesh</h3>
         </div> 
     </div>
-</body>
-</html>
+{% endblock %}
 
+{% block styles %}
+    <link rel="stylesheet" href="/css/blogs.css">
+    <link rel="stylesheet" href="/css/blog-template.css">
+{% endblock %}
