--- a/views/blogs/why-use-noteroom.njk
+++ b/views/blogs/why-use-noteroom.njk
@@ -31,10 +31,8 @@
         <header class="article-header">
           <div class="article-breadcrumb">
             <nav>
-              <a href="/blog" class="breadcrumb-main">Blog <span>/</span> </a>
-              <a href="/blog/why-use-noteroom" class="breadcrumb-sub"
-                >NoteRoom</a
-              >
+              <a href="/blog" class="breadcrumb-main">Blog <span>/</span></a>
+              <a href="/blog/why-use-noteroom" class="breadcrumb-sub">NoteRoom</a>
             </nav>
           </div>
   
