--- a/views/home.njk
+++ b/views/home.njk
@@ -12,7 +12,10 @@
 
 {% block content %}
 	<section class="hero flex-col-center">
-		<div class="circles" id="circles" aria-hidden="true"></div>
+		{# <div class="circles" id="circles" aria-hidden="true"></div> #}
+		<div class="planet-container">
+			<img src="\images\solar-system-animation.jpg" alt="planet" class="planet" />
+		</div>
 
 		<div class="copy flex-col-center">
 			<h1 class="headline">
