--- a/public/css/home.css
+++ b/public/css/home.css
@@ -48,6 +48,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: hidden
  }
   
 /* === Hero === */
@@ -59,6 +60,7 @@
   justify-content: center;
   text-align: center;
   overflow: hidden;
+  overflow-y: hidden;
   background: #fff;
 }
 
@@ -109,19 +111,16 @@
   overflow: hidden;
 }
 
-/* rings (with top/bottom fade) */
-.circle {
+/* .circle {
   position: absolute;
   border-radius: 50%;
   width: var(--size);
   height: var(--size);
   border: var(--ring-w, 1px) solid rgba(0,0,0,var(--ring-a, .05));
-  /* soft fade so they don't look like full circles */
   mask-image: linear-gradient(to bottom, transparent, black 18%, black 82%, transparent);
   -webkit-mask-image: linear-gradient(to bottom, transparent, black 18%, black 82%, transparent);
 }
 
-/* blobs */
 .blob {
   position: absolute;
   top: 50%; left: 50%;
@@ -138,4 +137,31 @@
   from { transform: translate(-50%, -50%) rotate(var(--angle, 0deg)) translateX(var(--radius)) rotate(calc(-1 * var(--angle, 0deg))); }
   to   { transform: translate(-50%, -50%) rotate(calc(var(--angle, 0deg) + 360deg)) translateX(var(--radius)) rotate(calc(-1 * (var(--angle, 0deg) + 360deg))); }
 }
+ */
 
+.planet-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 0;
+  pointer-events: none;
+}
+
+.planet {
+  object-fit: cover;
+  animation: rotate 60s linear infinite;
+}
+
+@keyframes rotate {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+@media (max-width: 600px) {
+  .planet {
+    width: 550px;
+    height: 550px;
+  }
+  
+}
