--- a/views/partials/layout.njk
+++ b/views/partials/layout.njk
@@ -64,10 +64,22 @@
 
 				<nav class="header__nav nav-pc" id="headerNav">
 					<ul class="nav-list">
-						<li><a href="/about-us">About</a></li>
-						<li><a href="/support">Support</a></li>
-						<li><a href="/join-us">Join Team</a></li>
-						<li><a href="/blog">Blog</a></li>
+						<li>
+							<a href="/about-us">About</a>
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path d="M7 7h8.586L5.293 17.293l1.414 1.414L17 8.414V17h2V5H7v2z"/></svg>	
+						</li>
+						<li>
+							<a href="/support">Support</a>
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path d="M7 7h8.586L5.293 17.293l1.414 1.414L17 8.414V17h2V5H7v2z"/></svg>	
+						</li>
+						<li>
+							<a href="/join-us">Career</a>
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path d="M7 7h8.586L5.293 17.293l1.414 1.414L17 8.414V17h2V5H7v2z"/></svg>
+						</li>
+						<li>
+							<a href="/blog">Blog</a>
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path d="M7 7h8.586L5.293 17.293l1.414 1.414L17 8.414V17h2V5H7v2z"/></svg>
+						</li>
 					</ul>
 				</nav>
 
