used image_path helper function instead of plain path in home page

--- a/views/home.njk
+++ b/views/home.njk
@@ -14,7 +14,7 @@
 	<section class="hero flex-col-center">
 		{# <div class="circles" id="circles" aria-hidden="true"></div> #}
 		<div class="planet-container">
-			<img src="\images\solar-system-animation.jpg" alt="planet" class="planet" />
+            <img src="{{ image_path('solar-system-animation.jpg') }}" alt="planet" class="planet" />
 		</div>
 
 		<div class="copy flex-col-center">
