blog placement and grid issue resolved

--- a/views/blogs/all.njk
+++ b/views/blogs/all.njk
@@ -10,20 +10,23 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container" onclick="window.location.href='/blog/why-use-noteroom'" >
-        <div class="blog-card">
-            <div class="tags">
-                <span class="tag">#Noteroom</span>
-                <span class="tag">#Study</span>
-                <span class="tag">#HSC</span>
-            </div>
-            <img class="blog-img" src="{{ image_path('why-use-noteroom-banner.jpg') }}" alt="Blog Image">
-            <h3>Why You Should Use Noteroom: The Game-Changer for HSC Students in Bangladesh</h3>
-        </div> 
-    </div>
+    <main>
+        <div class="container" onclick="window.location.href='/blog/why-use-noteroom'" >
+            {% for i in range(0, 10) %}
+                <div class="blog-card">
+                    <div class="tags">
+                        <span class="tag">#Noteroom</span>
+                        <span class="tag">#Study</span>
+                        <span class="tag">#HSC</span>
+                    </div>
+                    <img class="blog-img" src="{{ image_path('why-use-noteroom-banner.jpg') }}" alt="Blog Image">
+                    <h3>Why You Should Use Noteroom: The Game-Changer for HSC Students in Bangladesh</h3>
+                </div> 
+            {% endfor %}
+        </div>
+    </main>
 {% endblock %}
 
 {% block styles %}
     <link rel="stylesheet" href="/css/blogs.css">
-    <link rel="stylesheet" href="/css/blog-template.css">
 {% endblock %}
