--- a/views/blog-editor.njk
+++ b/views/blog-editor.njk
@@ -5,21 +5,17 @@
 {% endblock %}
 
 {% block content %}
-    <div id="editorjs"></div>
-    <div class="controls">
-        <button id="saveBtn">Save</button>
+    <div class="editor-container">
+        <div class="editor-header">
+            <h1>Blog Editor</h1>
+            <p class="subtitle">Writing blog as <b>{{ author.name }}</b></p>
+        </div>
+        <div id="editorjs" class="editor-area"></div>
+        <div class="editor-controls">
+            <button id="saveBtn" class="btn-save">Save Draft</button>
+        </div>
+        <pre id="output" class="editor-output"></pre>
     </div>
-
-    <div id="saved-blogs">
-    </div>
-
-    <pre id="output"></pre>
-    <div id="preview"></div> 
-
-    <section id="author-info">
-        <span id="author-name">{{ author.name }}</span>
-        <span id="author-pfp">{{ author.pfp }}</span>
-    </section>
 {% endblock %}
 
 {% block scripts %}
@@ -28,15 +24,251 @@
     <script src="https://cdn.jsdelivr.net/npm/@editorjs/list@latest/dist/bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@editorjs/link@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/@editorjs/underline@latest"></script>
-    <script src="/js/blog-editor.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slugify@1.6.6/slugify.min.js"></script>
+    <script>
+        function Filter(blocks) {
+            let _foundIndexes = null
+            let _indexIdx = null
+            let _mergingIndex = null
+            this.commands = [
+                "tag",
+                "by",
+                "rdtime",
+                "abt",
+                "st",
+                "end",
+                "idx",
+                "brd",
+                "pfp",
+                "thm"
+            ]
+            this.blog = blocks.map((block, i) => {
+                let data = block.data
+                if (_foundIndexes) {
+                    blocks[i - 1].data.items = data.items.map(item => ({index: item}))
+                    _foundIndexes = false
+                    return null
+                }
+                if (data.text) {
+                    if (data.text === "-") {
+                        data = {
+                            ... data,
+                            text: "<br>"
+                        }
+                    } else {
+                        const [p1, text] = data.text.split(":")
+                        const command = p1.split("-")[1]
+                        if (this.commands.includes(command)) {
+                            if (command === "idx") {
+                                _foundIndexes = true
+                                _indexIdx = i
+                                data.text = text
+                                data.command = command
+                            } else if (command === "st") {
+                                _mergingIndex = _mergingIndex !== null
+                                    ? _mergingIndex + 1
+                                    : 0
+                                const indexes = blocks[_indexIdx]
+                                    .data
+                                    .items
+                                    indexes[_mergingIndex]
+                                    .title = text
+                                indexes[_mergingIndex].contents = []
+                                return null
+                            } else if (command === "end") {
+                                _mergingIndex = null
+                                return null
+                            } else if (command === "tag") {
+                                const tags = text.split(" ")
+                                data = {
+                                    command,
+                                    tags
+                                }
+                            } else if (command === "brd") {
+                                const brdCrumbs = text.split(".")
+                                const link = brdCrumbs.map(brd => brd.split("@"))
+                                data = {
+                                    command,
+                                    brdCrumbs: link
+                                }
+                            } else {
+                                data = {
+                                    command,
+                                    text
+                                }
+                            }
+                        } else {
+                            data = p1
+                        }
+                    }
+                }
+                if (_mergingIndex !== null) {
+                    const indexes = blocks[_indexIdx]
+                        .data
+                        .items
+                        indexes[_mergingIndex]
+                        .contents
+                        .push(blocks[i].data.text)
+                    return null
+                }
+                return {type: block.type, data}
+            }).filter(block => block)
+        }
+        const editor = new EditorJS({
+            holder: 'editorjs',
+            autofocus: true,
+            placeholder: 'Start writing your blog...',
+            tools: {
+                header: {
+                    class: Header,
+                    inlineToolbar: ['bold', 'italic', 'underline', 'link']
+                },
+                list: {
+                    class: List,
+                    inlineToolbar: ['bold', 'italic', 'underline']
+                },
+                linkTool: LinkTool,
+                underline: Underline
+            },
+            data: {
+                blocks: [
+                    {
+                        type: "paragraph",
+                        data: {
+                            text: `-brd:Blog@/blogs.Label@/blogs/blog-title`,
+                        },
+                    },
+                    {
+                        type: "header",
+                        data: {
+                            text: "Blog Title",
+                            level: 1
+                        }
+                    },
+                    {
+                        type: "paragraph",
+                        data: {
+                            text: "-tag:#tag-1 #tag-2",
+                        }
+                    },
+                    {
+                        type: "paragraph",
+                        data: {
+                            text: "-thm:path-to-your-thumbnail.jpg",
+                        }
+                    },
+                    {
+                        type: "paragraph",
+                        data: {
+                            text: "-by:" + '{{ author.name }}'
+                        }
+                    }, 
+                    {
+                        type: "paragraph",
+                        data: {
+                            text: "-pfp:" + '{{ author.pfp }}'
+                        }
+                    },
+                    {
+                        type: "paragraph",
+                        data: {
+                            text: "-rdtime:2 mins"
+                        }
+                    },
+                    {
+                        type: "paragraph",
+                        data: {
+                            text: "-idx:On This Page"
+                        }
+                    },
+                    {
+                        type: "list",
+                        data: {
+                            style: "ordered",
+                            items: [
+                                "Chapter 1",
+                                "Chapter 2"
+                            ]
+                        }
+                    },
+                    {
+                        type: "paragraph",
+                        data: {
+                            text: "-st:Title of chapter 1"
+                        }
+                    },
+                    {
+                        type: "paragraph",
+                        data: {
+                            text: "Some writings under chapter 1. You can add more paragraphs under each chapter"
+                        }
+                    },
+                    {
+                        type: "paragraph",
+                        data: {
+                            text: "-st:Title of chapter 2"
+                        }
+                    },
+                    {
+                        type: "paragraph",
+                        data: {
+                            text: "Some writings under chapter 2. See, the index contains 2 list elements, and you also have to define 2 -st elements"
+                        }
+                    },
+                    {
+                        type: "paragraph",
+                        data: {
+                            text: "-end:End of chapters (you can only use -end to indicate this is the end of chapters)"
+                        }
+                    },
+                ]
+            },
+        });
+        const outputEl = document
+            .getElementById('output')
+            document
+            .getElementById('saveBtn')
+            .addEventListener('click', async () => {
+                try {
+                    let savedData = await editor.save();
+                    let filteredBlocks = new Filter(savedData.blocks).blog
+                    filteredBlocks.push({
+                        "type": "paragraph",
+                        "data": {
+                            "command": "date",
+                            "text": new Date()
+                        }
+                    })
+                    outputEl.textContent = JSON.stringify(filteredBlocks, null, 2);
+                    const response = await fetch("/admin/blog", {
+                        method: "post",
+                        headers: {
+                            "Content-Type": "application/json"
+                        },
+                        body: JSON.stringify(filteredBlocks)
+                    })
+                    if (response.ok) {
+                        const data = await response.json()
+                        if (data) {
+                            if (data.ok) {
+                                alert("Blog has been saved")
+                            } else {
+                                const code = data.code
+                                if (code === "EXIST") {
+                                    alert("A blog already exists with a similer title")
+                                } else {
+                                    alert("Couldn't save the blog!")
+                                }
+                            }
+                        }  
+                    }
+                } catch (err) {
+                    console.error(err);
+                }
+            });
+    </script>
 {% endblock %}
 
 {% block styles %}
     <link rel="stylesheet" href="/css/blog-editor.css">
-    <style>
-        #author-info {
-            display: none;
-        }
-    </style>
-
 {% endblock %}
